Refactor tests: replace List with Collections.singletonList for single-item assertions in BillingServiceTest, CategoryControllerTest, CategoryServiceTest, CustomerControllerTest, RentalItemControllerTest, RentalItemServiceTest, RetailProductControllerTest, RetailProductServiceTest, StockControllerTest, and StockServiceTest; update assertions to use getFirst() for improved readability