@@ -199,7 +199,7 @@ class RetailProductServiceTest {
         // Assert
         assertThat(result).isNotNull();
         assertThat(result.getContent()).hasSize(1);
-        assertThat(result.getContent().get(0).id()).isEqualTo(productId);
+        assertThat(result.getContent().getFirst().id()).isEqualTo(productId);
 
         verify(retailProductRepository, times(1)).findAll(pageable);
     }
